# polyominos

./: Cargo.toml  notes.txt  rustfmt.toml
proptest-regressions/: assemble.txt
src/: assemble.rs  board.rs  main.rs  omino.rs
